meou-client/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meou-react
  namespace: meou
  labels:
    app: meou-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meou-react
      tier: frontend
  template:
    metadata:
      labels:
        app: meou-react
        tier: frontend
    spec:
      containers:
        - name: app
          image: faisallarai/meou-client
          command: ['/bin/sh', '-c', 'env']
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '128Mi'
              cpu: '200m'
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 1
