meou-client/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meou-react-service
  namespace: meou
  labels:
    app: meou-react
    tier: frontend
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: meou-react
    tier: frontend
